Some change to clear the messy models istead created models for each view to clear the code

--- a/Todor-Stoykov-employees/Views/Shared/_EmployeesProjectsGrid.cshtml
+++ b/Todor-Stoykov-employees/Views/Shared/_EmployeesProjectsGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model  TodorStoykovEmployees.Models.UploadDataFileModel
+﻿@model  TodorStoykovEmployees.Models.EmployeesProjectsGridModel
 
 <div class="row" style="margin-top:70px; text-align:left;">
 
