--- a/Todor-Stoykov-employees/Views/Home/Index.cshtml
+++ b/Todor-Stoykov-employees/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿
+@model TodorStoykovEmployees.Models.HomeModel
+
+@{    
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,9 +9,9 @@
 
     <h1 class="display-4" style="margin-bottom:40px;">Find which two employees worked together the longest</h1>
 
-    <partial name="~/Views/Shared/_UploadDataFile.cshtml" />
+    <partial name="~/Views/Shared/_UploadDataFile.cshtml" model="Model.UploadDateFile" />
 
-    <partial name="~/Views/Shared/_EmployeesProjectsGrid.cshtml" />    
+    <partial name="~/Views/Shared/_EmployeesProjectsGrid.cshtml" model="Model.EmployeesProjectsGridData"  />
 
 
 </div>
